text alignment fix

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 }
 
 .flex-gap-2 {
-	gap: 0.5rem;
+	column-gap: 0.5rem;
 }
 
 .flex-gap-3 {
